<resources>

    <string name="app_name">UrjaVahini</string>
    <string name="app_name_marathi"> ऊर्जावाहिनी </string>
    <string name="sub_title">Contractor`s Diary</string>

    <array name="work_profile">
        <item>Select work profile</item>
        <item>ADMIN</item>
        <item>SUPERVISOR</item>
        <item>TEAM LEADER</item>
    </array>

    <array name="search_by_work_profile">
        <item>Search By Work Profile</item>
        <item>ADMIN</item>
        <item>SUPERVISOR</item>
        <item>TEAM LEADER</item>
    </array>


    <string name="todo">TODO</string>
    <string name="title_activity_admin">Admin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="profile">Profile</string>
    <string name="update">Update</string>
    <string name="theme">Theme</string>
    <string name="logout">Logout</string>


    <string name="menu_home">Home</string>
    <string name="menu_communicate">Communicate</string>
    <string name="menu_gallery">Help</string>
    <string name="menu_slideshow">Contact</string>
    <string name="menu_share">Share</string>
    <string name="menu_rateUs">Rate this app</string>
    <string name="menu_Privacy">Privacy-policy</string>
    <string name="title_activity_supervisor">Supervisor</string>
    <string name="title_activity_team_learder">TeamLearder</string>


    <!--    privacy-->
    <string name="privacy_text">Gson built the UrjaVahini app as a Free app. This SERVICE is provided by Gson at no cost and is intended for use as is.This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which are accessible at UrjaVahini unless otherwise defined in this Privacy Policy.</string>

    <string name="Information_Collection">For a better experience, while using our Service, we may require you to provide us with certain personally identifiable information, including but not limited to email,phone no,name,address. The information that we request will be retained by us and used as described in this privacy policy.The app does use third-party services that may collect information used to identify you.</string>

    <string name="link_privacy">Link to the privacy policy of third-party service providers used by the app</string>
    <string name="googlePlayService">•	Google Play Services</string>
    <string name="firebase">•	Google Analytics for Firebase</string>
    <string name="firebaseCash">•	Firebase Crashlytics</string>

    <string name="logdata">We want to inform you that whenever you use our Service, in a case of an error in the app we collect data and information (through third-party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.</string>
    <string name="Cookies">Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device\'s internal memory.This Service does not use these “cookies” explicitly. However, the app may use third-party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.</string>
    <string name="Service_Providers">We may employ third-party companies and individuals due to the following reasons:\n
        •	To facilitate our Service;\n
        •	To provide the Service on our behalf;\n
        •	To perform Service-related services; or\n
        •	To assist us in analyzing how our Service is used.\n
    We want to inform users of this Service that these third parties have access to their Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.</string>

    <string name="Security">We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.</string>
    <string name="Links_to_Other_Sites">This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites. We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</string>
    <string name="Children_Privacy">These Services do not address anyone under the age of 13. We do not knowingly collect personally identifiable information from children under 13 years of age. In the case we discover that a child under 13 has provided us with personal information, we immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact us so that we will be able to do the necessary actions.</string>
    <string name="Changes_to_This_Privacy_Policy">We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page.\nThis policy is effective as of 2022-07-11
    </string>
    <string name="Contact_Us">If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us at</string>
    <string name="email">urjavahini2809@gmail.com.</string>


    <!--Rate this app-->
    <string name="rate_dialog_title">Rate this app</string>
    <string name="rate_dialog_message">If you like this app, Please take a little bit of your time to review it!</string>
    <string name="share_message">If you like this app, Please take a little bit of your time to share it!</string>
    <string name="rate_dialog_ok">Rate It Now</string>
    <string name="rate_dialog_cancel">Remind Me Later</string>
    <string name="rate_dialog_no">No, Thanks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>