<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_contact"
            android:title="@string/menu_slideshow" />
    </group>

    <item android:title="@string/menu_communicate">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_share"
                    android:title="@string/menu_share" />
                <item
                    android:id="@+id/nav_rate"
                    android:icon="@drawable/ic_rate"
                    android:title="@string/menu_rateUs" />

            </group>
        </menu>
    </item>
    <item android:title="@string/menu_Privacy">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_privacy"
                    android:icon="@drawable/ic_privacy"
                    android:title="@string/menu_Privacy" />
            </group>
        </menu>
    </item>

    <item android:title="Help">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_gallery"
                    android:icon="@drawable/ic_help"
                    android:title="@string/menu_gallery" />
            </group>
        </menu>
    </item>

</menu>